syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

enum McsBillingProviderIndicator {
  BILLING_PROVIDER_INDICATOR_UNSET = 0;

  // ASCII G
  BILLING_PROVIDER_INDICATOR_GROUP = 71;
}
