syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum McsClaimLevelIndicator {
  CLAIM_LEVEL_INDICATOR_ADJUSTED = 0   [(string_value) = "A"];
  
  CLAIM_LEVEL_INDICATOR_ORIGINAL = 1   [(string_value) = "O"];

  CLAIM_LEVEL_INDICATOR_VOID = 2       [(string_value) = "V"];
}
