syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum McsCutbackAuditIndicator {
  CUTBACK_AUDIT_INDICATOR_AUDIT_NUMBER = 0              [(string_value) = "A"];

  CUTBACK_AUDIT_INDICATOR_HEADER_EDIT_NUMBER = 1        [(string_value) = "H"];

  CUTBACK_AUDIT_INDICATOR__AUDIT_NUM_IS_ZEROES = 2      [(string_value) = " "];
}
