syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum McsLocationActivityCode {
  LOCATION_ACTIVITY_CODE_ACTIVATION_ACTIVITY = 0                  [(string_value) = "A"];
  LOCATION_ACTIVITY_CODE_LOCATION_TRANSFER = 1                    [(string_value) = "B"];
  LOCATION_ACTIVITY_CODE_AGED_OUT_OF_PREVIOUS_LOCATION = 2        [(string_value) = "C"];
  LOCATION_ACTIVITY_CODE_DELAY_NOTICE_DUE = 3                     [(string_value) = "D"];
  LOCATION_ACTIVITY_CODE_FIRST_TIME_CLAIM_WAS_PROCESSED = 4       [(string_value) = "E"];
  LOCATION_ACTIVITY_CODE_MAINTENANCE_APPLIED_FROM_WORKSHEET_F = 5 [(string_value) = "F"];
  LOCATION_ACTIVITY_CODE_MAINTENANCE_APPLIED_FROM_WORKSHEET_G = 6 [(string_value) = "G"];
  LOCATION_ACTIVITY_CODE_MAINTENANCE_APPLIED_FROM_LETTER = 7      [(string_value) = "H"];
  LOCATION_ACTIVITY_CODE_LOCATION_ADJUSTMENT_ACTIVITY = 8         [(string_value) = "J"];
  LOCATION_ACTIVITY_CODE_FINANCIAL_RESPONSE_ACTIVITY = 9          [(string_value) = "K"];
  LOCATION_ACTIVITY_CODE_LETTER_REPRINT_ACTIVITY = 10             [(string_value) = "L"];
  LOCATION_ACTIVITY_CODE_MPAM_RESPONSE_APPLIED = 11               [(string_value) = "M"];
  LOCATION_ACTIVITY_CODE_CLAIM_IS_MISSING = 12                    [(string_value) = "N"];
  LOCATION_ACTIVITY_CODE_ADJUSTMENT_HISTORY_RESPONSE_APPLIED = 13 [(string_value) = "O"];
  LOCATION_ACTIVITY_CODE_CAS_ACTIVITY = 14                        [(string_value) = "Q"];
  LOCATION_ACTIVITY_CODE_CORRECTION_DOCUMENT_REPRINT = 15         [(string_value) = "R"];
  LOCATION_ACTIVITY_CODE_TACS_ACTIVITY = 16                       [(string_value) = "S"];
}
